--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "devserver": "concurrently \"npm run dev\" \"npm run client\""
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.4.1",
     "cors": "^2.8.5",
